--- a/e7calc/index.html
+++ b/e7calc/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/e7calc/favicon.png" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-c21d7c53.css">
-	<link rel="modulepreload" href="/_app/start-fd8b634f.js">
-	<link rel="modulepreload" href="/_app/chunks/index-922c7b3a.js">
-	<link rel="modulepreload" href="/_app/layout.svelte-e016474c.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-f14464c7.js">
+	<link rel="stylesheet" href="/e7calc/internal/assets/pages/index.svelte-c21d7c53.css">
+	<link rel="modulepreload" href="/e7calc/internal/start-a56f61c9.js">
+	<link rel="modulepreload" href="/e7calc/internal/chunks/index-922c7b3a.js">
+	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-e016474c.js">
+	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-f14464c7.js">
 	</head>
 	<body>
 		<div>
@@ -59,10 +59,10 @@
 
 
 		<script type="module" data-hydrate="aoxqvd">
-		import { start } from "/_app/start-fd8b634f.js";
+		import { start } from "/e7calc/internal/start-a56f61c9.js";
 		start({
 			target: document.querySelector('[data-hydrate="aoxqvd"]').parentNode,
-			paths: {"base":"","assets":""},
+			paths: {"base":"/e7calc","assets":"/e7calc"},
 			session: {},
 			route: true,
 			spa: false,
@@ -71,8 +71,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/layout.svelte-e016474c.js"),
-						import("/_app/pages/index.svelte-f14464c7.js")
+					import("/e7calc/internal/layout.svelte-e016474c.js"),
+						import("/e7calc/internal/pages/index.svelte-f14464c7.js")
 				],
 				params: {},
 				routeId: ""
