See https://github.com/aud0325/e7-svelte-item-calculator/commit/26afd118eeb4e7240ffcf87edaef3d3c4f8fdecf from refs/heads/master

--- a/e7calc/index.html
+++ b/e7calc/index.html
@@ -6,15 +6,17 @@
 		<link rel="icon" href="/e7calc/favicon.png" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta http-equiv="content-security-policy" content="">
+		<meta http-equiv="content-security-policy" content=""><title>Turam&#39;s e7 calculator</title><meta name="description" content="에픽세븐 템 점수계산기" data-svelte="svelte-1mymqbl">
 	<link rel="stylesheet" href="/e7calc/internal/assets/pages/index.svelte-c21d7c53.css">
-	<link rel="modulepreload" href="/e7calc/internal/start-314729a6.js">
-	<link rel="modulepreload" href="/e7calc/internal/chunks/index-922c7b3a.js">
-	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-e016474c.js">
-	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-f14464c7.js">
+	<link rel="modulepreload" href="/e7calc/internal/start-fef2a730.js">
+	<link rel="modulepreload" href="/e7calc/internal/chunks/index-e59d2d6e.js">
+	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-03e4ad3a.js">
+	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-435af1d8.js">
 	</head>
 	<body>
 		<div>
+
+
 
 
 
@@ -58,10 +60,10 @@
 		<div class="col"><button class="btn btn-secondary" value="" style="">단축키 보기</button></div></div></div>
 
 
-		<script type="module" data-hydrate="aoxqvd">
-		import { start } from "/e7calc/internal/start-314729a6.js";
+		<script type="module" data-hydrate="1ubgwjt">
+		import { start } from "/e7calc/internal/start-fef2a730.js";
 		start({
-			target: document.querySelector('[data-hydrate="aoxqvd"]').parentNode,
+			target: document.querySelector('[data-hydrate="1ubgwjt"]').parentNode,
 			paths: {"base":"/e7calc","assets":"/e7calc"},
 			session: {},
 			route: true,
@@ -71,8 +73,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/e7calc/internal/layout.svelte-e016474c.js"),
-						import("/e7calc/internal/pages/index.svelte-f14464c7.js")
+					import("/e7calc/internal/layout.svelte-03e4ad3a.js"),
+						import("/e7calc/internal/pages/index.svelte-435af1d8.js")
 				],
 				params: {},
 				routeId: ""
