See https://github.com/aud0325/e7-svelte-item-calculator/commit/06ac856d9b713f5c5297e43749dc85f99f4c1884 from refs/heads/master

--- a/e7calc/index.html
+++ b/e7calc/index.html
@@ -8,10 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content=""><title>Turam&#39;s e7 calculator</title><meta name="description" content="에픽세븐 템 점수계산기" data-svelte="svelte-1mymqbl">
 	<link rel="stylesheet" href="/e7calc/internal/assets/pages/index.svelte-c21d7c53.css">
-	<link rel="modulepreload" href="/e7calc/internal/start-6ed28430.js">
+	<link rel="modulepreload" href="/e7calc/internal/start-9e9e1956.js">
 	<link rel="modulepreload" href="/e7calc/internal/chunks/index-e59d2d6e.js">
 	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-03e4ad3a.js">
-	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-634c4cfa.js">
+	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-d720efa6.js">
 	</head>
 	<body>
 		<div>
@@ -58,15 +58,13 @@
 			<div>0</div></div></div>
 	<div class="row"><div class="col"><button class="btn btn-secondary" value="" style="">리셋</button></div>
 		<div class="col"><button class="btn btn-secondary" value="" style="">단축키 보기</button></div></div>
-	<div class="row"><div class="col"><div style="white-space:pre-wrap">85레벨 노강 영웅템 기준
-        0/0 (NaN%) 점수의 아이템이에요.
-        (만약 3강이 적게 보인다면, 최대 점수에 8점을 더하세요)</div></div></div></div>
+	<div class="row"><div class="col"><div style="white-space:pre-wrap">3개 이상의 옵션을 넣어주세요</div></div></div></div>
 
 
-		<script type="module" data-hydrate="ue9ezc">
-		import { start } from "/e7calc/internal/start-6ed28430.js";
+		<script type="module" data-hydrate="tao5ab">
+		import { start } from "/e7calc/internal/start-9e9e1956.js";
 		start({
-			target: document.querySelector('[data-hydrate="ue9ezc"]').parentNode,
+			target: document.querySelector('[data-hydrate="tao5ab"]').parentNode,
 			paths: {"base":"/e7calc","assets":"/e7calc"},
 			session: {},
 			route: true,
@@ -77,7 +75,7 @@
 				error: null,
 				nodes: [
 					import("/e7calc/internal/layout.svelte-03e4ad3a.js"),
-						import("/e7calc/internal/pages/index.svelte-634c4cfa.js")
+						import("/e7calc/internal/pages/index.svelte-d720efa6.js")
 				],
 				params: {},
 				routeId: ""
