See https://github.com/aud0325/e7-svelte-item-calculator/commit/14314c1441931bf072ba1467d3cb28ba83402433 from refs/heads/master

--- a/e7calc/index.html
+++ b/e7calc/index.html
@@ -8,10 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content=""><title>Turam&#39;s e7 calculator</title><meta name="description" content="에픽세븐 템 점수계산기" data-svelte="svelte-1mymqbl">
 	<link rel="stylesheet" href="/e7calc/internal/assets/pages/index.svelte-c21d7c53.css">
-	<link rel="modulepreload" href="/e7calc/internal/start-68f56d6e.js">
+	<link rel="modulepreload" href="/e7calc/internal/start-0309619f.js">
 	<link rel="modulepreload" href="/e7calc/internal/chunks/index-e59d2d6e.js">
 	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-03e4ad3a.js">
-	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-dcefe3b2.js">
+	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-c6094a8f.js">
 	</head>
 	<body>
 		<div>
@@ -21,50 +21,63 @@
 
 
 
-<div class="text-center container"><div class="row"><div class="col"><label class="form-label" for="atkPer">공격력%</label>
-			<input class="form-control" type="number" name="atkPer" placeholder="" value="0">
+<div class="text-center container"><div class="row"><div class="col"><label class="form-label" for="atkPer">공격력%
+    </label>
+<input class="form-control" type="number" name="atkPer" placeholder="" value="0">
 </div>
-		<div class="col"><label class="form-label" for="hpPer">생명력%</label>
-			<input class="form-control" type="number" name="hpPer" placeholder="" value="0">
+		<div class="col"><label class="form-label" for="hpPer">생명력%
+    </label>
+<input class="form-control" type="number" name="hpPer" placeholder="" value="0">
 </div>
-		<div class="col"><label class="form-label" for="defPer">방어력%</label>
-			<input class="form-control" type="number" name="defPer" placeholder="" value="0">
+		<div class="col"><label class="form-label" for="defPer">방어력%
+    </label>
+<input class="form-control" type="number" name="defPer" placeholder="" value="0">
 </div></div>
-	<div class="row"><div class="col"><label class="form-label" for="atk">공격력</label>
-			<input class="form-control" type="number" name="atk" placeholder="" value="0">
+	<div class="row"><div class="col"><label class="form-label" for="atk">깡공
+    </label>
+<input class="form-control" type="number" name="atk" placeholder="" value="0">
 </div>
-		<div class="col"><label class="form-label" for="hp">생명력</label>
-			<input class="form-control" type="number" name="hp" placeholder="" value="0">
+		<div class="col"><label class="form-label" for="hp">깡생
+    </label>
+<input class="form-control" type="number" name="hp" placeholder="" value="0">
 </div>
-		<div class="col"><label class="form-label" for="def">방어력</label>
-			<input class="form-control" type="number" name="def" placeholder="" value="0">
+		<div class="col"><label class="form-label" for="def">깡방
+    </label>
+<input class="form-control" type="number" name="def" placeholder="" value="0">
 </div></div>
-	<div class="row"><div class="col"><label class="form-label" for="spd">속도</label>
-			<input class="form-control" type="number" name="spd" placeholder="" value="0">
+	<div class="row"><div class="col"><label class="form-label" for="spd">속도
+    </label>
+<input class="form-control" type="number" name="spd" placeholder="" value="0">
 </div>
-		<div class="col"><label class="form-label" for="cri">치확</label>
-			<input class="form-control" type="number" name="cri" placeholder="" value="0">
+		<div class="col"><label class="form-label" for="cri">치확
+    </label>
+<input class="form-control" type="number" name="cri" placeholder="" value="0">
 </div>
-		<div class="col"><label class="form-label" for="criDmg">치피</label>
-			<input class="form-control" type="number" name="criDmg" placeholder="" value="0">
+		<div class="col"><label class="form-label" for="criDmg">치피
+    </label>
+<input class="form-control" type="number" name="criDmg" placeholder="" value="0">
 </div></div>
-	<div class="row"><div class="col"><label class="form-label" for="eff">효적</label>
-			<input class="form-control" type="number" name="eff" placeholder="" value="0">
+	<div class="row"><div class="col"><label class="form-label" for="eff">효적
+    </label>
+<input class="form-control" type="number" name="eff" placeholder="" value="0">
 </div>
-		<div class="col"><label class="form-label" for="res">효저</label>
-			<input class="form-control" type="number" name="res" placeholder="" value="0">
+		<div class="col"><label class="form-label" for="res">효저
+    </label>
+<input class="form-control" type="number" name="res" placeholder="" value="0">
 </div>
 		<div class="col"><label class="form-label">점수</label>
 			<div>0</div></div></div>
 	<div class="row"><div class="col"><button class="btn btn-secondary" value="" style="">리셋</button></div>
 		<div class="col"><button class="btn btn-secondary" value="" style="">단축키 보기</button></div></div>
-	<div class="row"><div class="col"><div style="white-space:pre-wrap">3개 이상의 옵션을 넣어주세요</div></div></div></div>
+	<div class="row">
+
+<div class="col"><div style="white-space:pre-wrap" class="mt-3">3개 이상의 옵션을 넣어주세요</div></div></div></div>
 
 
-		<script type="module" data-hydrate="tao5ab">
-		import { start } from "/e7calc/internal/start-68f56d6e.js";
+		<script type="module" data-hydrate="jsnmrs">
+		import { start } from "/e7calc/internal/start-0309619f.js";
 		start({
-			target: document.querySelector('[data-hydrate="tao5ab"]').parentNode,
+			target: document.querySelector('[data-hydrate="jsnmrs"]').parentNode,
 			paths: {"base":"/e7calc","assets":"/e7calc"},
 			session: {},
 			route: true,
@@ -75,7 +88,7 @@
 				error: null,
 				nodes: [
 					import("/e7calc/internal/layout.svelte-03e4ad3a.js"),
-						import("/e7calc/internal/pages/index.svelte-dcefe3b2.js")
+						import("/e7calc/internal/pages/index.svelte-c6094a8f.js")
 				],
 				params: {},
 				routeId: ""
