See https://github.com/aud0325/e7-svelte-item-calculator/commit/9927354c61bf0fbb3bf12b723eb871bbe761b9a1 from refs/heads/master

--- a/e7calc/index.html
+++ b/e7calc/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-K4NFJNR');</script>
+		<!-- End Google Tag Manager -->
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="/e7calc/favicon.png" />
@@ -8,12 +15,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content=""><title>Turam&#39;s e7 calculator</title><meta name="description" content="에픽세븐 템 점수계산기" data-svelte="svelte-1mymqbl">
 	<link rel="stylesheet" href="/e7calc/internal/assets/pages/index.svelte-c21d7c53.css">
-	<link rel="modulepreload" href="/e7calc/internal/start-b87dbff8.js">
+	<link rel="modulepreload" href="/e7calc/internal/start-e0bccfad.js">
 	<link rel="modulepreload" href="/e7calc/internal/chunks/index-e59d2d6e.js">
 	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-03e4ad3a.js">
 	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-1a4c2136.js">
 	</head>
 	<body>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K4NFJNR" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
 		<div>
 
 
@@ -75,7 +85,7 @@
 
 
 		<script type="module" data-hydrate="jsnmrs">
-		import { start } from "/e7calc/internal/start-b87dbff8.js";
+		import { start } from "/e7calc/internal/start-e0bccfad.js";
 		start({
 			target: document.querySelector('[data-hydrate="jsnmrs"]').parentNode,
 			paths: {"base":"/e7calc","assets":"/e7calc"},
