See https://github.com/aud0325/e7-svelte-item-calculator/commit/5bc4a7085f493811f3b5466f5681b987506d9ef1 from refs/heads/master

--- a/e7calc/index.html
+++ b/e7calc/index.html
@@ -15,10 +15,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content=""><title>Turam&#39;s e7 calculator</title><meta name="description" content="에픽세븐 템 점수계산기" data-svelte="svelte-1mymqbl">
 	<link rel="stylesheet" href="/e7calc/internal/assets/pages/index.svelte-c21d7c53.css">
-	<link rel="modulepreload" href="/e7calc/internal/start-e747cc0c.js">
+	<link rel="modulepreload" href="/e7calc/internal/start-ced6c9f4.js">
 	<link rel="modulepreload" href="/e7calc/internal/chunks/index-e59d2d6e.js">
 	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-03e4ad3a.js">
-	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-ee28507a.js">
+	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-cc3aa785.js">
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
@@ -92,13 +92,14 @@
 		<div class="col"><button class="btn btn-secondary" value="" style="">단축키 보기</button></div></div>
 	<div class="row">
 
-<div class="col"><div style="white-space:pre-wrap" class="mt-3">3개 이상의 옵션을 넣어주세요</div></div></div></div>
+<div class="col-md-12 col-lg-8 offset-lg-2"><div style="white-space:pre-wrap" class="mt-3">3개 이상의 옵션을 넣어주세요</div>
+    </div></div></div>
 
 
-		<script type="module" data-hydrate="12llwl6">
-		import { start } from "/e7calc/internal/start-e747cc0c.js";
+		<script type="module" data-hydrate="4bp9ct">
+		import { start } from "/e7calc/internal/start-ced6c9f4.js";
 		start({
-			target: document.querySelector('[data-hydrate="12llwl6"]').parentNode,
+			target: document.querySelector('[data-hydrate="4bp9ct"]').parentNode,
 			paths: {"base":"/e7calc","assets":"/e7calc"},
 			session: {},
 			route: true,
@@ -109,7 +110,7 @@
 				error: null,
 				nodes: [
 					import("/e7calc/internal/layout.svelte-03e4ad3a.js"),
-						import("/e7calc/internal/pages/index.svelte-ee28507a.js")
+						import("/e7calc/internal/pages/index.svelte-cc3aa785.js")
 				],
 				params: {},
 				routeId: ""
