--- a/e7calc/index.html
+++ b/e7calc/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-E2Q1E2XLQD"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-E2Q1E2XLQD');
+		</script>
 		<!-- Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		<!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer','GTM-K4NFJNR');</script>
+		})(window,document,'script','dataLayer','GTM-K4NFJNR');</script> -->
 		<!-- End Google Tag Manager -->
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="/e7calc/favicon.png" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta http-equiv="content-security-policy" content=""><title>Turam&#39;s e7 calculator</title><meta name="description" content="에픽세븐 템 점수계산기" data-svelte="svelte-1mymqbl">
+		<meta http-equiv="content-security-policy" content=""><title>에픽세븐 템 점수계산기</title><meta name="description" content="에픽세븐 템 점수계산기" data-svelte="svelte-1v7re4b">
 	<link rel="stylesheet" href="/e7calc/internal/assets/pages/index.svelte-c21d7c53.css">
-	<link rel="modulepreload" href="/e7calc/internal/start-d75946fc.js">
+	<link rel="modulepreload" href="/e7calc/internal/start-bc629f0f.js">
 	<link rel="modulepreload" href="/e7calc/internal/chunks/index-e59d2d6e.js">
 	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-03e4ad3a.js">
-	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-13d245d7.js">
+	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-8afc305e.js">
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
@@ -97,7 +106,7 @@
 
 
 		<script type="module" data-hydrate="4bp9ct">
-		import { start } from "/e7calc/internal/start-d75946fc.js";
+		import { start } from "/e7calc/internal/start-bc629f0f.js";
 		start({
 			target: document.querySelector('[data-hydrate="4bp9ct"]').parentNode,
 			paths: {"base":"/e7calc","assets":"/e7calc"},
@@ -110,7 +119,7 @@
 				error: null,
 				nodes: [
 					import("/e7calc/internal/layout.svelte-03e4ad3a.js"),
-						import("/e7calc/internal/pages/index.svelte-13d245d7.js")
+						import("/e7calc/internal/pages/index.svelte-8afc305e.js")
 				],
 				params: {},
 				routeId: ""
