--- a/e7calc/index.html
+++ b/e7calc/index.html
@@ -22,12 +22,13 @@
 		<link rel="icon" href="/e7calc/favicon.png" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta http-equiv="content-security-policy" content=""><title>에픽세븐 템 점수계산기</title><meta name="description" content="에픽세븐 템 점수계산기" data-svelte="svelte-1v7re4b">
-	<link rel="stylesheet" href="/e7calc/internal/assets/pages/index.svelte-c21d7c53.css">
-	<link rel="modulepreload" href="/e7calc/internal/start-bc629f0f.js">
-	<link rel="modulepreload" href="/e7calc/internal/chunks/index-e59d2d6e.js">
-	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-03e4ad3a.js">
-	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-8afc305e.js">
+		<meta http-equiv="content-security-policy" content=""><title>Epic7 gear score calculator</title><meta name="description" content="Epic7 gear score calculator" data-svelte="svelte-1rgqwvp">
+	<link rel="stylesheet" href="/e7calc/internal/assets/pages/index.svelte-035c75d1.css">
+	<link rel="modulepreload" href="/e7calc/internal/start-dfa77adc.js">
+	<link rel="modulepreload" href="/e7calc/internal/chunks/index-a75f5066.js">
+	<link rel="modulepreload" href="/e7calc/internal/chunks/preload-helper-e2e61f78.js">
+	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-a3a5c8fe.js">
+	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-7b73c21d.js">
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
@@ -40,75 +41,13 @@
 
 
 
-<div class="text-center container"><div class="row"><div class="col"><label class="form-label" for="atkPer">공격력%
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="atkPer" placeholder="" value="0">
-
-    </div></div>
-		<div class="col"><label class="form-label" for="hpPer">생명력%
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="hpPer" placeholder="" value="0">
-
-    </div></div>
-		<div class="col"><label class="form-label" for="defPer">방어력%
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="defPer" placeholder="" value="0">
-
-    </div></div></div>
-	<div class="row"><div class="col"><label class="form-label" for="atk">깡공
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="atk" placeholder="" value="0">
-
-    </div></div>
-		<div class="col"><label class="form-label" for="hp">깡생
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="hp" placeholder="" value="0">
-
-    </div></div>
-		<div class="col"><label class="form-label" for="def">깡방
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="def" placeholder="" value="0">
-
-    </div></div></div>
-	<div class="row"><div class="col"><label class="form-label" for="spd">속도
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="spd" placeholder="" value="0">
-
-    </div></div>
-		<div class="col"><label class="form-label" for="cri">치확
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="cri" placeholder="" value="0">
-
-    </div></div>
-		<div class="col"><label class="form-label" for="criDmg">치피
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="criDmg" placeholder="" value="0">
-
-    </div></div></div>
-	<div class="row"><div class="col"><label class="form-label" for="eff">효적
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="eff" placeholder="" value="0">
-
-    </div></div>
-		<div class="col"><label class="form-label" for="res">효저
-    </label>
-<div class="input-group"><input class="form-control" type="number" name="res" placeholder="" value="0">
-
-    </div></div>
-		<div class="col"><label class="form-label">점수</label>
-			<div>0</div></div></div>
-	<div class="row"><div class="col"><button class="btn btn-secondary" value="" style="">리셋</button></div>
-		<div class="col"><button class="btn btn-secondary" value="" style="">단축키 보기</button></div></div>
-	<div class="row">
-
-<div class="col-md-12 col-lg-8 offset-lg-2"><div style="white-space:pre-wrap" class="mt-3">3개 이상의 옵션을 넣어주세요</div>
-    </div></div></div>
+<div class="loading-wrapper svelte-u4ez17"><div class="loader svelte-7vciel"></div></div>
 
 
-		<script type="module" data-hydrate="4bp9ct">
-		import { start } from "/e7calc/internal/start-bc629f0f.js";
+		<script type="module" data-hydrate="vbex30">
+		import { start } from "/e7calc/internal/start-dfa77adc.js";
 		start({
-			target: document.querySelector('[data-hydrate="4bp9ct"]').parentNode,
+			target: document.querySelector('[data-hydrate="vbex30"]').parentNode,
 			paths: {"base":"/e7calc","assets":"/e7calc"},
 			session: {},
 			route: true,
@@ -118,8 +57,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/e7calc/internal/layout.svelte-03e4ad3a.js"),
-						import("/e7calc/internal/pages/index.svelte-8afc305e.js")
+					import("/e7calc/internal/layout.svelte-a3a5c8fe.js"),
+						import("/e7calc/internal/pages/index.svelte-7b73c21d.js")
 				],
 				params: {},
 				routeId: ""
