See https://github.com/aud0325/e7-svelte-item-calculator/commit/1245a8a2e1e4bcb7670987cae03d527b7d379c56 from refs/heads/master

--- a/e7calc/index.html
+++ b/e7calc/index.html
@@ -24,11 +24,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content=""><title>Epic7 gear score calculator</title><meta name="description" content="Epic7 gear score calculator" data-svelte="svelte-1rgqwvp">
 	<link rel="stylesheet" href="/e7calc/internal/assets/pages/index.svelte-035c75d1.css">
-	<link rel="modulepreload" href="/e7calc/internal/start-dfa77adc.js">
-	<link rel="modulepreload" href="/e7calc/internal/chunks/index-a75f5066.js">
-	<link rel="modulepreload" href="/e7calc/internal/chunks/preload-helper-e2e61f78.js">
-	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-a3a5c8fe.js">
-	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-7b73c21d.js">
+	<link rel="modulepreload" href="/e7calc/internal/start-619fe054.js">
+	<link rel="modulepreload" href="/e7calc/internal/chunks/index-93bd69e4.js">
+	<link rel="modulepreload" href="/e7calc/internal/chunks/preload-helper-80c0275c.js">
+	<link rel="modulepreload" href="/e7calc/internal/layout.svelte-c5a521e5.js">
+	<link rel="modulepreload" href="/e7calc/internal/pages/index.svelte-151ccdd7.js">
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
@@ -39,15 +39,13 @@
 
 
 
-
-
 <div class="loading-wrapper svelte-u4ez17"><div class="loader svelte-7vciel"></div></div>
 
 
-		<script type="module" data-hydrate="vbex30">
-		import { start } from "/e7calc/internal/start-dfa77adc.js";
+		<script type="module" data-hydrate="9t960s">
+		import { start } from "/e7calc/internal/start-619fe054.js";
 		start({
-			target: document.querySelector('[data-hydrate="vbex30"]').parentNode,
+			target: document.querySelector('[data-hydrate="9t960s"]').parentNode,
 			paths: {"base":"/e7calc","assets":"/e7calc"},
 			session: {},
 			route: true,
@@ -57,8 +55,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/e7calc/internal/layout.svelte-a3a5c8fe.js"),
-						import("/e7calc/internal/pages/index.svelte-7b73c21d.js")
+					import("/e7calc/internal/layout.svelte-c5a521e5.js"),
+						import("/e7calc/internal/pages/index.svelte-151ccdd7.js")
 				],
 				params: {},
 				routeId: ""
